--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "solstice",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.2.5",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "jsdom": "^21.0.0",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
   },
   "dependencies": {
