算是完成初版了

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es2016",
     "module": "ES6",
     "moduleResolution": "node",
-    // "outDir": "./built",
+    "allowJs": true,
+    "outDir": "./dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
