--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bilibili-sc-display",
   "version": "1.0.0",
   "description": "为了在看直播的时候更方便地看SC",
-  "main": "index.js",
+  "main": "main.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,7 +14,10 @@
     "jest-environment-jsdom": "^29.3.1",
     "jsdom": "^21.0.0",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.9.4"
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "dependencies": {
     "@types/jquery": "^3.5.16",
